--- a/package.json
+++ b/package.json
@@ -7,20 +7,26 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest --watch",
     "cypress": "cypress open"
   },
   "dependencies": {
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ts-jest": "^29.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
     "@types/react-dom": "18.0.6",
     "cypress": "^10.7.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "typescript": "4.8.3"
   }
 }
