--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "daisyui": "^2.27.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,11 +24,14 @@
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.9",
     "cypress": "^10.7.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.0.3",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
 }
